Removed commented code